feat: Admin，add products
HttpContext.Current.User.IsInRole("canEdit")

--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,10 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WingtipToys-20220401075742.mdf;Initial Catalog=aspnet-WingtipToys-20220401075742;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="WingtipToys" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\wingtiptoys.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="AppUserPasswordKey" value="AppUserPasswordKey"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="WebForms"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
